--- a/pom.xml
+++ b/pom.xml
@@ -26,18 +26,18 @@
     </properties>
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>com.github.Skadovskiy</groupId>
-                <artifactId>ru.ubrr.steps</artifactId>
-                <version>main-SNAPSHOT</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>com.github.Skadovskiy</groupId>-->
+<!--                <artifactId>ru.ubrr.steps</artifactId>-->
+<!--                <version>main-SNAPSHOT</version>-->
+<!--            </dependency>-->
         </dependencies>
     </dependencyManagement>
     <dependencies>
-        <dependency>
-            <groupId>com.github.Skadovskiy</groupId>
-            <artifactId>ru.ubrr.steps</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.github.Skadovskiy</groupId>-->
+<!--            <artifactId>ru.ubrr.steps</artifactId>-->
+<!--        </dependency>-->
     </dependencies>
 
 </project>
